Bug 957188 - Increase touch start tolerance to more easily detect taps. r=botond